Fix sidebar collapse in mobile view

--- a/src_new/label-dashboard-web/src/app/app.component.scss
+++ b/src_new/label-dashboard-web/src/app/app.component.scss
@@ -53,8 +53,4 @@
     left: 0;
   }
   
-  .sidebar {
-    transform: translateX(-100%);
-    transition: transform 0.3s ease;
-  }
 }
