--- a/src_new/label-dashboard-web/src/app/shared/navbar/navbar.component.scss
+++ b/src_new/label-dashboard-web/src/app/shared/navbar/navbar.component.scss
@@ -53,11 +53,17 @@
   
   .navbar-brand {
     margin-left: 0;
+    flex: 1;
   }
   
   .container-fluid {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+  }
+  
+  .navbar-collapse {
+    display: none !important; // Hide regular menu items on mobile
   }
 }
 
